# freebusy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml  test_main.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  dependabot.yml  docker_image.yml  release_gen.yml  test.yml
freebusy/: main.py
